deploy/yc-sirius/edu-insane-perlman/project.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-deployment
  labels:
    app: project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - name: project
        image: myapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
