deploy/yc-sirius/edu-insane-perlman/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: star-burger-ingress
spec:
  rules:
  - host: star-burger.test
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: project-service
            port:
              number: 80
